# whatsapp-leo

./: .env_example  .gitignore  README.md  pyproject.toml  requirements.txt  start_services.sh
agent/: agent.py  briefing.py  instructions.txt  reminder.py
whatsapp-mcp/: .gitignore
whatsapp-mcp/whatsapp-bridge/: go.mod  go.sum  main.go
whatsapp-mcp/whatsapp-mcp-server/: whatsapp.py
