[project]
name = "whatsapp-leo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate==1.12.0",
    "croniter>=2.0.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.2",
    "aiosignal==1.4.0",
    "annotated-types==0.7.0",
    "antlr4-python3-runtime==4.9.3",
    "anyio==4.12.0",
    "attrs==25.4.0",
    "beautifulsoup4==4.14.3",
    "certifi==2025.11.12",
    "cffi==2.0.0 ; platform_python_implementation != 'PyPy'",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "colorama==0.4.6",
    "colorlog==6.10.1",
    "cryptography==46.0.3",
    "dill==0.4.0",
    "distro==1.9.0",
    "docling==2.66.0",
    "docling-core==2.57.0",
    "docling-ibm-models==3.10.3",
    "docling-parse==4.7.2",
    "dotenv==0.9.9",
    "et-xmlfile==2.0.0",
    "faker==40.1.0",
    "filelock==3.20.1",
    "filetype==1.2.0",
    "frozenlist==1.8.0",
    "fsspec==2025.12.0",
    "griffe==1.15.0",
    "h11==0.16.0",
    "hf-xet==1.2.0 ; platform_machine == 'aarch64' or platform_machine == 'amd64' or platform_machine == 'arm64' or platform_machine == 'x86_64'",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "httpx-sse==0.4.3",
    "huggingface-hub==0.36.0",
    "idna==3.11",
    "importlib-metadata==8.7.1",
    "jinja2==3.1.6",
    "jiter==0.12.0",
    "jsonlines==4.0.0",
    "jsonref==1.1.0",
    "jsonschema==4.25.1",
    "jsonschema-path==0.3.4",
    "jsonschema-specifications==2025.9.1",
    "latex2mathml==3.78.1",
    "lazy-object-proxy==1.12.0",
    "lxml==6.0.2",
    "markdown-it-py==4.0.0",
    "marko==2.2.1",
    "markupsafe==3.0.3",
    "mcp==1.25.0",
    "mdurl==0.1.2",
    "mpire==2.10.2",
    "mpmath==1.3.0",
    "multidict==6.7.0",
    "multiprocess==0.70.18",
    "networkx==3.6.1",
    "numpy==2.4.0",
    "orjson>=3.10.0",
    "nvidia-cublas-cu12==12.8.4.1 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cuda-cupti-cu12==12.8.90 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cuda-nvrtc-cu12==12.8.93 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cuda-runtime-cu12==12.8.90 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cudnn-cu12==9.10.2.21 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cufft-cu12==11.3.3.83 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cufile-cu12==1.13.1.3 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-curand-cu12==10.3.9.90 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cusolver-cu12==11.7.3.90 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cusparse-cu12==12.5.8.93 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cusparselt-cu12==0.7.1 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-nccl-cu12==2.27.5 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-nvjitlink-cu12==12.8.93 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-nvshmem-cu12==3.3.20 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-nvtx-cu12==12.8.90 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "ocrmac==1.0.0 ; sys_platform == 'darwin'",
    "omegaconf==2.3.0",
    "openai==2.14.0",
    "openai-agents==0.6.4",
    "openai-core==0.0.1",
    "openapi-schema-validator==0.6.3",
    "openapi-spec-validator==0.7.2",
    "opencv-python==4.11.0.86",
    "openpyxl==3.1.5",
    "opentelemetry-api==1.39.1",
    "packaging==25.0",
    "pandas==2.3.3",
    "pathable==0.4.4",
    "pillow==11.3.0",
    "pluggy==1.6.0",
    "polyfactory==3.2.0",
    "propcache==0.4.1",
    "psutil==7.2.1",
    "pyclipper==1.4.0",
    "pycparser==2.23 ; implementation_name != 'PyPy' and platform_python_implementation != 'PyPy'",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pydantic-settings==2.12.0",
    "pygments==2.19.2",
    "pyjwt==2.10.1",
    "pylatexenc==2.10",
    "pyobjc-core==12.1 ; sys_platform == 'darwin'",
    "pyobjc-framework-cocoa==12.1 ; sys_platform == 'darwin'",
    "pyobjc-framework-coreml==12.1 ; sys_platform == 'darwin'",
    "pyobjc-framework-quartz==12.1 ; sys_platform == 'darwin'",
    "pyobjc-framework-vision==12.1 ; sys_platform == 'darwin'",
    "pypdfium2==4.30.0",
    "python-dateutil==2.9.0.post0",
    "python-docx==1.2.0",
    "python-dotenv==1.2.1",
    "python-http-client==3.3.7",
    "python-multipart==0.0.21",
    "python-pptx==1.0.2",
    "pytz==2025.2",
    "pywin32==311 ; sys_platform == 'win32'",
    "pyyaml==6.0.3",
    "rapidocr==3.4.5",
    "referencing==0.36.2",
    "regex==2025.11.3",
    "requests==2.32.5",
    "rfc3339-validator==0.1.4",
    "rich==14.2.0",
    "rpds-py==0.30.0",
    "rtree==1.4.1",
    "safetensors==0.7.0",
    "scipy==1.16.3",
    "semchunk==2.2.2",
    "sendgrid==6.12.5",
    "setuptools==80.9.0",
    "shapely==2.1.2",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "soupsieve==2.8.1",
    "sse-starlette==3.0.4",
    "starlette==0.50.0",
    "sympy==1.14.0",
    "tabulate==0.9.0",
    "tavily-python==0.7.17",
    "tiktoken==0.12.0",
    "tokenizers==0.22.1",
    "torch==2.9.1",
    "torchvision==0.24.1",
    "tqdm==4.67.1",
    "transformers==4.57.3",
    "tree-sitter==0.25.2",
    "tree-sitter-c==0.24.1",
    "tree-sitter-java==0.23.5",
    "tree-sitter-javascript==0.25.0",
    "tree-sitter-python==0.25.0",
    "tree-sitter-typescript==0.23.2",
    "triton==3.5.1 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "typer==0.19.2",
    "types-requests==2.32.4.20250913",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.3",
    "urllib3==2.6.2",
    "uvicorn==0.40.0 ; sys_platform != 'emscripten'",
    "werkzeug==3.1.4",
    "xlsxwriter==3.2.9",
    "yarl==1.22.0",
    "yt-dlp==2025.12.8",
    "zipp==3.23.0",
]
